pages/dkp/konvoy/1.4/reference/command-line-interface/konvoy-deploy/index.md
---
layout: layout.pug
navigationTitle: konvoy deploy
title: konvoy deploy
menuWeight: 10
notes: Automatically generated, DO NOT EDIT
enterprise: false
excerpt: Deploy a fully functioning Kubernetes cluster and addons
---

## konvoy deploy

Deploy a fully functioning Kubernetes cluster and addons

### Synopsis

Deploy a fully functioning Kubernetes cluster and addons

```
konvoy deploy [flags]
```

### Options

```
      --force-upgrade      run an upgrade on all nodes that require it, ignoring upgrade safety checks
  -h, --help               help for deploy
      --upgrade            run an upgrade on all nodes that require it
      --verbose            enable to debug level logging
      --without-draining   run an upgrade on all nodes that require it, without draining the nodes first (requires --upgrade or --force-upgrade flag) (WARNING! usage can result in undefined behavior and service downtime)
  -y, --yes                run command without prompting
```

### SEE ALSO

* [konvoy](../)	 - deploy and manage Kubernetes clusters
* [konvoy deploy addons](./konvoy-deploy-addons/)	 - Deploy Kubernetes addons
* [konvoy deploy container-networking](./konvoy-deploy-container-networking/)	 - Deploy container networking
* [konvoy deploy kubernetes](./konvoy-deploy-kubernetes/)	 - Deploy a Kubernetes cluster except CNI plugins (use 'deploy container-networking' to deploy those)

###### Auto generated by spf13/cobra on 31-Mar-2020
